--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,57 +1,66 @@
 # 2024-04-19
 
-共 50 条
+共 59 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 00:00:52 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 01:00:50 GMT+0800 (China Standard Time) -->
 1. [老人给城管下跪 当事人暂停工作](https://so.toutiao.com/search?keyword=老人给城管下跪+当事人暂停工作)
-1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
-1. [三个关键词透视中国经济2024年首季报](https://so.toutiao.com/search?keyword=三个关键词透视中国经济2024年首季报)
 1. [中国女游客在泰国一酒店门口被抢](https://so.toutiao.com/search?keyword=中国女游客在泰国一酒店门口被抢)
-1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
+1. [三个关键词透视中国经济2024年首季报](https://so.toutiao.com/search?keyword=三个关键词透视中国经济2024年首季报)
+1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
+1. [哈工大学生造格斗机器人夺国际冠军](https://so.toutiao.com/search?keyword=哈工大学生造格斗机器人夺国际冠军)
+1. [乌称若乌战败或爆发第三次世界大战](https://so.toutiao.com/search?keyword=乌称若乌战败或爆发第三次世界大战)
 1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
-1. [周鸿祎：余承东和李斌问我会选谁的车](https://so.toutiao.com/search?keyword=周鸿祎：余承东和李斌问我会选谁的车)
-1. [割喉杀妻案将宣判 死者父亲发声](https://so.toutiao.com/search?keyword=割喉杀妻案将宣判+死者父亲发声)
-1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
-1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
+1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
+1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
+1. [北京万达总部大楼被卖 媒体探访](https://so.toutiao.com/search?keyword=北京万达总部大楼被卖+媒体探访)
 1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
 1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
 1. [菲总统避谈美国是否会为菲对华开战](https://so.toutiao.com/search?keyword=菲总统避谈美国是否会为菲对华开战)
-1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
-1. [全红婵主管教练陈若琳夜游西安城墙](https://so.toutiao.com/search?keyword=全红婵主管教练陈若琳夜游西安城墙)
-1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
 1. [女孩医院墙角睡着 好心人叫来护士](https://so.toutiao.com/search?keyword=女孩医院墙角睡着+好心人叫来护士)
-1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
-1. [雷军：女生买小米SU7最喜欢霞光紫](https://so.toutiao.com/search?keyword=雷军：女生买小米SU7最喜欢霞光紫)
-1. [克罗斯盛赞吕迪格对于哈兰德的防守](https://so.toutiao.com/search?keyword=克罗斯盛赞吕迪格对于哈兰德的防守)
-1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
-1. [雷军直播霸总式出场](https://so.toutiao.com/search?keyword=雷军直播霸总式出场)
-1. [阿如那的紧张要溢出来了](https://so.toutiao.com/search?keyword=阿如那的紧张要溢出来了)
-1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
 1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
-1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
-1. [湖南一学生坠楼身亡 官方调查](https://so.toutiao.com/search?keyword=湖南一学生坠楼身亡+官方调查)
+1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
+1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
 1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
-1. [44岁高圆圆状态](https://so.toutiao.com/search?keyword=44岁高圆圆状态)
-1. [舒马赫妻子再卖8块手表救夫](https://so.toutiao.com/search?keyword=舒马赫妻子再卖8块手表救夫)
-1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
-1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
-1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
-1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
-1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
-1. [万达电影新老板曾押中多部爆款剧](https://so.toutiao.com/search?keyword=万达电影新老板曾押中多部爆款剧)
-1. [广州一均价千万小区飘窗为泡沫墙体](https://so.toutiao.com/search?keyword=广州一均价千万小区飘窗为泡沫墙体)
-1. [贵州盘州突降冰雹 多处房顶被砸穿](https://so.toutiao.com/search?keyword=贵州盘州突降冰雹+多处房顶被砸穿)
-1. [印尼总统佐科会见王毅](https://so.toutiao.com/search?keyword=印尼总统佐科会见王毅)
-1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
-1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
-1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
-1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
-1. [男子开挖掘机去西藏变身318补路工](https://so.toutiao.com/search?keyword=男子开挖掘机去西藏变身318补路工)
-1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
-1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
-1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [美称将加强中东地区导弹防御和预警](https://so.toutiao.com/search?keyword=美称将加强中东地区导弹防御和预警)
+1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
+1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
+1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
+1. [周鸿祎：余承东和李斌问我会选谁的车](https://so.toutiao.com/search?keyword=周鸿祎：余承东和李斌问我会选谁的车)
+1. [贵州盘州突降冰雹 多处房顶被砸穿](https://so.toutiao.com/search?keyword=贵州盘州突降冰雹+多处房顶被砸穿)
+1. [雷军直播霸总式出场](https://so.toutiao.com/search?keyword=雷军直播霸总式出场)
+1. [广州一均价千万小区飘窗为泡沫墙体](https://so.toutiao.com/search?keyword=广州一均价千万小区飘窗为泡沫墙体)
+1. [万达电影新老板曾押中多部爆款剧](https://so.toutiao.com/search?keyword=万达电影新老板曾押中多部爆款剧)
+1. [雷军：女生买小米SU7最喜欢霞光紫](https://so.toutiao.com/search?keyword=雷军：女生买小米SU7最喜欢霞光紫)
+1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
+1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
+1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
+1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
+1. [舒马赫妻子再卖8块手表救夫](https://so.toutiao.com/search?keyword=舒马赫妻子再卖8块手表救夫)
+1. [克罗斯盛赞吕迪格对于哈兰德的防守](https://so.toutiao.com/search?keyword=克罗斯盛赞吕迪格对于哈兰德的防守)
+1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
+1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
+1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
+1. [孩子遭小黑虫叮咬满身是包](https://so.toutiao.com/search?keyword=孩子遭小黑虫叮咬满身是包)
+1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
+1. [央行原副行长范一飞受贿3.86亿受审](https://so.toutiao.com/search?keyword=央行原副行长范一飞受贿3.86亿受审)
+1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
+1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
+1. [雷军：纯电轿车基本都是亏损的](https://so.toutiao.com/search?keyword=雷军：纯电轿车基本都是亏损的)
+1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
+1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
+1. [徐巧芯被曝穿名牌裙 晒标签开呛](https://so.toutiao.com/search?keyword=徐巧芯被曝穿名牌裙+晒标签开呛)
+1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
+1. [阿如那的紧张要溢出来了](https://so.toutiao.com/search?keyword=阿如那的紧张要溢出来了)
+1. [白鹿：恭喜自己从观众走到电视机里](https://so.toutiao.com/search?keyword=白鹿：恭喜自己从观众走到电视机里)
+1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
+1. [割喉杀妻案将宣判 死者父亲发声](https://so.toutiao.com/search?keyword=割喉杀妻案将宣判+死者父亲发声)
+1. [全红婵主管教练陈若琳夜游西安城墙](https://so.toutiao.com/search?keyword=全红婵主管教练陈若琳夜游西安城墙)
+1. [湖南一学生坠楼身亡 官方调查](https://so.toutiao.com/search?keyword=湖南一学生坠楼身亡+官方调查)
+1. [44岁高圆圆状态](https://so.toutiao.com/search?keyword=44岁高圆圆状态)
+1. [印尼总统佐科会见王毅](https://so.toutiao.com/search?keyword=印尼总统佐科会见王毅)
+1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
+1. [男子开挖掘机去西藏变身318补路工](https://so.toutiao.com/search?keyword=男子开挖掘机去西藏变身318补路工)
 1. [鹦鹉嫌主人不好看薅羽毛给他装饰](https://so.toutiao.com/search?keyword=鹦鹉嫌主人不好看薅羽毛给他装饰)
 1. [49岁林志玲红毯状态](https://so.toutiao.com/search?keyword=49岁林志玲红毯状态)
 <!-- END TOUTIAO -->
