--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,58 +1,69 @@
 # 2024-04-19
 
-共 102 条
+共 109 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 06:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 19 2024 07:00:37 GMT+0800 (China Standard Time) -->
 1. [老人给城管下跪 当事人暂停工作](https://so.toutiao.com/search?keyword=老人给城管下跪+当事人暂停工作)
 1. [菲总统避谈美国是否会为菲对华开战](https://so.toutiao.com/search?keyword=菲总统避谈美国是否会为菲对华开战)
 1. [三个关键词透视中国经济2024年首季报](https://so.toutiao.com/search?keyword=三个关键词透视中国经济2024年首季报)
 1. [樊振东4-3险胜林诗栋晋级世界杯8强](https://so.toutiao.com/search?keyword=樊振东4-3险胜林诗栋晋级世界杯8强)
-1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
-1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
 1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
-1. [王毅同印尼外长蕾特诺举行会谈](https://so.toutiao.com/search?keyword=王毅同印尼外长蕾特诺举行会谈)
+1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
+1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
 1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
-1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
+1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
+1. [以色列遭火箭弹袭击致多人伤亡](https://so.toutiao.com/search?keyword=以色列遭火箭弹袭击致多人伤亡)
 1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
 1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
-1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
-1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
-1. [山东男子李先进坚持施救落水儿童](https://so.toutiao.com/search?keyword=山东男子李先进坚持施救落水儿童)
-1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
-1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
-1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
-1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
-1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
-1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
-1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
+1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
 1. [马斯克财富蒸发超1万亿](https://so.toutiao.com/search?keyword=马斯克财富蒸发超1万亿)
+1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
+1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
+1. [特斯拉被裁员工：满意赔偿标准](https://so.toutiao.com/search?keyword=特斯拉被裁员工：满意赔偿标准)
+1. [外交部：欢迎美国国务卿布林肯访华](https://so.toutiao.com/search?keyword=外交部：欢迎美国国务卿布林肯访华)
 1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
-1. [日元对人民币汇率创近年来新低](https://so.toutiao.com/search?keyword=日元对人民币汇率创近年来新低)
-1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
-1. [中国女游客在泰国一酒店门口被抢](https://so.toutiao.com/search?keyword=中国女游客在泰国一酒店门口被抢)
-1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
-1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
+1. [周海媚墓地公布 安葬在北京](https://so.toutiao.com/search?keyword=周海媚墓地公布+安葬在北京)
 1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
-1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
+1. [网红飞飞一杯酒妻子：会继续经营酒水](https://so.toutiao.com/search?keyword=网红飞飞一杯酒妻子：会继续经营酒水)
+1. [美军在菲部署中程导弹 外交部回应](https://so.toutiao.com/search?keyword=美军在菲部署中程导弹+外交部回应)
+1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
+1. [老人在成都居家4个月燃气费1.5万](https://so.toutiao.com/search?keyword=老人在成都居家4个月燃气费1.5万)
+1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
+1. [拜登叫嚣美不领导世界还有谁能领导](https://so.toutiao.com/search?keyword=拜登叫嚣美不领导世界还有谁能领导)
 1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
+1. [男子开挖掘机去西藏变身318补路工](https://so.toutiao.com/search?keyword=男子开挖掘机去西藏变身318补路工)
+1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
+1. [实拍广州暴雨瞬间白昼变夜晚](https://so.toutiao.com/search?keyword=实拍广州暴雨瞬间白昼变夜晚)
+1. [11岁男孩被教训后举报爷爷有枪](https://so.toutiao.com/search?keyword=11岁男孩被教训后举报爷爷有枪)
+1. [中国女游客在泰国一酒店门口被抢](https://so.toutiao.com/search?keyword=中国女游客在泰国一酒店门口被抢)
+1. [女子检票插队被指责后恼怒打人](https://so.toutiao.com/search?keyword=女子检票插队被指责后恼怒打人)
+1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
+1. [日元对人民币汇率创近年来新低](https://so.toutiao.com/search?keyword=日元对人民币汇率创近年来新低)
+1. [出差迪拜中国人讲述暴雨经历](https://so.toutiao.com/search?keyword=出差迪拜中国人讲述暴雨经历)
+1. [曾带火景区的网红们现在怎么样了](https://so.toutiao.com/search?keyword=曾带火景区的网红们现在怎么样了)
+1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
+1. [北京万达总部大楼被卖 媒体探访](https://so.toutiao.com/search?keyword=北京万达总部大楼被卖+媒体探访)
+1. [欧弟说想卖跑车养女儿](https://so.toutiao.com/search?keyword=欧弟说想卖跑车养女儿)
+1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
+1. [广州一均价千万小区飘窗为泡沫墙体](https://so.toutiao.com/search?keyword=广州一均价千万小区飘窗为泡沫墙体)
+1. [女孩医院墙角睡着 好心人叫来护士](https://so.toutiao.com/search?keyword=女孩医院墙角睡着+好心人叫来护士)
+1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
+1. [炒菜锅着火 狗子害怕躲沟里](https://so.toutiao.com/search?keyword=炒菜锅着火+狗子害怕躲沟里)
+1. [成都重庆燃气集团股东涉同家公司](https://so.toutiao.com/search?keyword=成都重庆燃气集团股东涉同家公司)
+1. [山东男子李先进坚持施救落水儿童](https://so.toutiao.com/search?keyword=山东男子李先进坚持施救落水儿童)
 1. [囤日元当理财在年轻人中“火”了](https://so.toutiao.com/search?keyword=囤日元当理财在年轻人中“火”了)
+1. [王毅同印尼外长蕾特诺举行会谈](https://so.toutiao.com/search?keyword=王毅同印尼外长蕾特诺举行会谈)
+1. [专家：乌克兰颓势明显邻国密谋瓜分](https://so.toutiao.com/search?keyword=专家：乌克兰颓势明显邻国密谋瓜分)
 1. [广州小伙街头唱《求神》爆火](https://so.toutiao.com/search?keyword=广州小伙街头唱《求神》爆火)
 1. [福建舰舰载机“全家福”亮相](https://so.toutiao.com/search?keyword=福建舰舰载机“全家福”亮相)
 1. [哈尔滨啤酒在香港被检出含呕吐毒素](https://so.toutiao.com/search?keyword=哈尔滨啤酒在香港被检出含呕吐毒素)
 1. [专家谈傅崐萁将率国民党民代访陆](https://so.toutiao.com/search?keyword=专家谈傅崐萁将率国民党民代访陆)
 1. [舒马赫妻子再卖8块手表救夫](https://so.toutiao.com/search?keyword=舒马赫妻子再卖8块手表救夫)
-1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
-1. [菲律宾狐假虎威昏了头](https://so.toutiao.com/search?keyword=菲律宾狐假虎威昏了头)
-1. [男子被查酒驾自称是纪委的人遭怼](https://so.toutiao.com/search?keyword=男子被查酒驾自称是纪委的人遭怼)
-1. [中方支持巴勒斯坦正式加入联合国](https://so.toutiao.com/search?keyword=中方支持巴勒斯坦正式加入联合国)
-1. [成都重庆燃气集团股东涉同家公司](https://so.toutiao.com/search?keyword=成都重庆燃气集团股东涉同家公司)
 1. [细数乒乓球历史上的重要变革](https://so.toutiao.com/search?keyword=细数乒乓球历史上的重要变革)
-1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
 1. [美方返还中方38件文物 外交部回应](https://so.toutiao.com/search?keyword=美方返还中方38件文物+外交部回应)
 1. [亚洲货币“保卫战”开启](https://so.toutiao.com/search?keyword=亚洲货币“保卫战”开启)
-1. [网红飞飞一杯酒妻子：会继续经营酒水](https://so.toutiao.com/search?keyword=网红飞飞一杯酒妻子：会继续经营酒水)
 1. [中国2月持有美国国债减少227亿美元](https://so.toutiao.com/search?keyword=中国2月持有美国国债减少227亿美元)
 1. [核酸大王张核子回应张珊珊身份](https://so.toutiao.com/search?keyword=核酸大王张核子回应张珊珊身份)
 1. [家电买得起扔不起如何处理](https://so.toutiao.com/search?keyword=家电买得起扔不起如何处理)
@@ -74,7 +85,6 @@
 1. [钟南山发文悼念沈华浩](https://so.toutiao.com/search?keyword=钟南山发文悼念沈华浩)
 1. [南宁春节期间发生4死刑案 嫌犯被捕](https://so.toutiao.com/search?keyword=南宁春节期间发生4死刑案+嫌犯被捕)
 1. [拉萨八廓街：到世界屋脊的街头走走](https://so.toutiao.com/search?keyword=拉萨八廓街：到世界屋脊的街头走走)
-1. [广州一均价千万小区飘窗为泡沫墙体](https://so.toutiao.com/search?keyword=广州一均价千万小区飘窗为泡沫墙体)
 1. [济南辟谣晨练大爷发现坟中躺着活人](https://so.toutiao.com/search?keyword=济南辟谣晨练大爷发现坟中躺着活人)
 1. [中央气象台连发三预警](https://so.toutiao.com/search?keyword=中央气象台连发三预警)
 1. [俄罗斯维和部队提前撤离纳卡地区](https://so.toutiao.com/search?keyword=俄罗斯维和部队提前撤离纳卡地区)
@@ -83,9 +93,7 @@
 1. [周鸿祎要卖迈巴赫买国产新能源车](https://so.toutiao.com/search?keyword=周鸿祎要卖迈巴赫买国产新能源车)
 1. [雷军直播霸总式出场](https://so.toutiao.com/search?keyword=雷军直播霸总式出场)
 1. [乌称若乌战败或爆发第三次世界大战](https://so.toutiao.com/search?keyword=乌称若乌战败或爆发第三次世界大战)
-1. [北京万达总部大楼被卖 媒体探访](https://so.toutiao.com/search?keyword=北京万达总部大楼被卖+媒体探访)
 1. [“开封王婆”江西说媒首日促成多对](https://so.toutiao.com/search?keyword=“开封王婆”江西说媒首日促成多对)
-1. [女孩医院墙角睡着 好心人叫来护士](https://so.toutiao.com/search?keyword=女孩医院墙角睡着+好心人叫来护士)
 1. [印尼总统佐科会见王毅](https://so.toutiao.com/search?keyword=印尼总统佐科会见王毅)
 1. [哈工大学生造格斗机器人夺国际冠军](https://so.toutiao.com/search?keyword=哈工大学生造格斗机器人夺国际冠军)
 1. [王婆谈开封小舞台：那是我的初心](https://so.toutiao.com/search?keyword=王婆谈开封小舞台：那是我的初心)
@@ -103,7 +111,6 @@
 1. [全红婵主管教练陈若琳夜游西安城墙](https://so.toutiao.com/search?keyword=全红婵主管教练陈若琳夜游西安城墙)
 1. [湖南一学生坠楼身亡 官方调查](https://so.toutiao.com/search?keyword=湖南一学生坠楼身亡+官方调查)
 1. [44岁高圆圆状态](https://so.toutiao.com/search?keyword=44岁高圆圆状态)
-1. [男子开挖掘机去西藏变身318补路工](https://so.toutiao.com/search?keyword=男子开挖掘机去西藏变身318补路工)
 1. [鹦鹉嫌主人不好看薅羽毛给他装饰](https://so.toutiao.com/search?keyword=鹦鹉嫌主人不好看薅羽毛给他装饰)
 1. [49岁林志玲红毯状态](https://so.toutiao.com/search?keyword=49岁林志玲红毯状态)
 <!-- END TOUTIAO -->
